# restapi/operations/api/group_usage_parameters.go
@@ -1,0 +1,62 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package api
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// NewGroupUsageParams creates a new GroupUsageParams object
+//
+// There are no default values defined in the spec.
+func NewGroupUsageParams() GroupUsageParams {
+
+	return GroupUsageParams{}
+}
+
+// GroupUsageParams contains all the bound params for the group usage operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters groupUsage
+type GroupUsageParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*The names of the quota-groups to get the usage information for.
+	  In: body
+	*/
+	Groups []string
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewGroupUsageParams() beforehand.
+func (o *GroupUsageParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if runtime.HasBody(r) {
+		defer r.Body.Close()
+		var body []string
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			res = append(res, errors.NewParseError("groups", "body", "", err))
+		} else {
+			// no validation required on inline body
+			o.Groups = body
+		}
+	}
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
