# restapi/operations/swagger_api.go
@@ -66,6 +66,9 @@ func NewSwaggerAPI(spec *loads.Document) *SwaggerAPI {
 		APIGroupMembersDeleteHandler: apiops.GroupMembersDeleteHandlerFunc(func(params apiops.GroupMembersDeleteParams) middleware.Responder {
 			return middleware.NotImplemented("operation api.GroupMembersDelete has not yet been implemented")
 		}),
+		APIGroupUsageHandler: apiops.GroupUsageHandlerFunc(func(params apiops.GroupUsageParams) middleware.Responder {
+			return middleware.NotImplemented("operation api.GroupUsage has not yet been implemented")
+		}),
 	}
 }
 
@@ -116,6 +119,8 @@ type SwaggerAPI struct {
 	APIGroupMembersAddHandler apiops.GroupMembersAddHandler
 	// APIGroupMembersDeleteHandler sets the operation handler for the group members delete operation
 	APIGroupMembersDeleteHandler apiops.GroupMembersDeleteHandler
+	// APIGroupUsageHandler sets the operation handler for the group usage operation
+	APIGroupUsageHandler apiops.GroupUsageHandler
 
 	// ServeError is called when an error is received, there is a default handler
 	// but you can set your own with this
@@ -213,6 +218,9 @@ func (o *SwaggerAPI) Validate() error {
 	}
 	if o.APIGroupMembersDeleteHandler == nil {
 		unregistered = append(unregistered, "api.GroupMembersDeleteHandler")
+	}
+	if o.APIGroupUsageHandler == nil {
+		unregistered = append(unregistered, "api.GroupUsageHandler")
 	}
 
 	if len(unregistered) > 0 {
@@ -330,6 +338,10 @@ func (o *SwaggerAPI) initHandlerCache() {
 		o.handlers["DELETE"] = make(map[string]http.Handler)
 	}
 	o.handlers["DELETE"]["/group/members"] = apiops.NewGroupMembersDelete(o.context, o.APIGroupMembersDeleteHandler)
+	if o.handlers["GET"] == nil {
+		o.handlers["GET"] = make(map[string]http.Handler)
+	}
+	o.handlers["GET"]["/group/usage"] = apiops.NewGroupUsage(o.context, o.APIGroupUsageHandler)
 }
 
 // Serve creates a http handler to serve the API over HTTP
